
	However, what about:   f(int:x) = f(real:x) = 2*x
	That would be nice as well.  However, the correct translation
	would be:

	                   f(int:x) = 2*x; f(real:x) = 2*x

	since in this case the RHS is not evaluated.  However, at the time
	of 'split_by_semicolon' we can't know that.  Thus we keep it as it
	is.

2007-09-03  Mikio Braun  <mikiobraun@gmail.com>

	* eval.c: restructured source code to make it less a waterfall of
	function calls. Now, everything is contained in call_fun, with
	more helper functions.

2007-09-02  Stefan Harmeling  <harmeling@gmail.com>

	* eval.c (pattern_matches), object.c (extend): removed bug that
	prevented the literal mechanism to work: now we can do the
	following cool stuff:

	f(1) = 1;
	f(2) = 1;
	f(n) = f(n-1) + f(n-2);

	Return value is void for 'f(x) = 2*x'.  The problem is when typing

	f(1) = f(2) = 17;

	we really get:

	f(2) = 17;
	f(1) = (f(2) = 17);

	since the RHS is *not* evaluated for this syntactic sugar.

	* prelude.rha: added support for matrix access:

	m = rand(4,3);
	m(2,3) = 0;
	m(1,2);

	added macros for lazy 'and' and 'or', which now work the next line
	of 'prelude.rha'.
	
	* parse.c: removed 'parse()' and 'parse_file()' which are now
	obsolete since the introduction of 'split_resolve_and_eval'.
	
	* Makefile (test): added case that allows a clean built and
	running of the test cases in test.rha by typing 'make test'.

	* core.c (split_resolve_and_eval): new function that splits a
	bison-parsed string into semicolon separated expression, which are
	evaluated immediately after resolving prules.  The advantage is
	that macros defined in some file (e.g. lazy 'and_fn') can be used
	a few lines later already (e.g. in 'colon_fn').
	(run_fn), rhabarber.c: now the main read-eval-print loop and
	'run_fn' are using the 'split_resolve_and_eval' function.  this
	also removed some of the uglyness of having a loop in 'main'.

	* prules.c (curlied_pr): separated a new function