@@ -13,34 +13,29 @@
 #ifndef PYTHON_H
 #define PYTHON_H
 
-#include "pyobject_tr.h"
+#include "rha_types.h"
 
-#include "object.h"
-#include "symbol_tr.h"
-#include "tuple_tr.h"
+extern _rha_ void python_init(any_t, any_t);
 
-typedef struct python_s *python_tr;
-extern primtype_t python_type;
+extern _rha_ any_t python_newinteger(int_t i);
+extern _rha_ any_t python_newreal(real_t r);
+extern _rha_ any_t python_newstring(string_t s);
+extern _rha_ any_t python_newtuple(int_t len);
+extern _rha_ any_t python_newlist();
+extern _rha_ int_t      python_getint(pyobject_t o);
+extern _rha_ real_t     python_getreal(pyobject_t o);
+extern _rha_ string_t   python_getstring(pyobject_t o);
 
-extern python_tr python_domain;
+extern _rha_ string_t   python_to_string(pyobject_t o);
 
-extern void python_init();
+extern _rha_ pyobject_t python_importmodule(string_t name);
 
-extern object_t python_lookup(symbol_tr name);
-extern object_t python_call(pyobject_tr fct, tuple_tr args);
-extern object_t python_callmethod(pyobject_tr obj, symbol_tr slot, tuple_tr args);
+extern _rha_ string_t python_getversion();
 
-
-extern constructor pyobject_tr python_newinteger(int i);
-extern constructor pyobject_tr python_newreal(double r);
-extern constructor pyobject_tr python_newstring(string_t s);
-extern constructor pyobject_tr python_newtuple(int len);
-extern constructor pyobject_tr python_newlist();
-
-extern constructor pyobject_tr python_importmodule(string_t name);
-
-extern method string_t python_getversion(python_tr p);
-
+extern       any_t  python_wrap(PyObject *po);
+extern _rha_ any_t  python_lookup(pyobject_t o, symbol_t name);
+extern _rha_ bool_t python_callable(pyobject_t o);
+extern _rha_ any_t  python_call(any_t this, tuple_t values);
 #endif
 
 #endif /* HAVE_PYTHON */
